--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-click==6.7
-Flask==0.12.3
-itsdangerous==0.24
+click==7.0
+Flask==1.0.2
+gunicorn==19.8.1
+itsdangerous==1.1.0
 Jinja2==2.10
-MarkupSafe==1.0
-peewee==3.2.2
+MarkupSafe==1.1.1
+peewee==3.9.3
 psycopg2==2.7.4
-Werkzeug==0.14.1
+Werkzeug==0.15.1
